--- a/ProgTestStudio/Properties/Resources.resx
+++ b/ProgTestStudio/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="PNGPIX-COM-Arrow-Transparent-PNG-Image-3-500x391" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PNGPIX-COM-Arrow-Transparent-PNG-Image-3-500x391.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconfinder_Arrow_Forward_1063879" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconfinder_Arrow_Forward_1063879.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
